校验oss
