# server/internal/server/router/conf.go
@@ -19,5 +19,6 @@ func registerConfRouter(store *model.Store, r *gin.RouterGroup) {
 	{
 		confR.GET("oss", conf.QueryOSSConf)
 		confR.POST("oss", conf.UpdateOSSConf)
+		confR.GET("oss/verify", conf.VerifyOSS)
 	}
 }
