# server/internal/svc/conf.go
@@ -1,6 +1,7 @@
 package svc
 
 import (
+	"supersign/pkg/ali"
 	"supersign/pkg/caches"
 	"supersign/pkg/e"
 )
@@ -21,6 +22,18 @@ func (f *Conf) UpdateOSSConf(info *caches.OSSInfo) error {
 	err := f.store.Conf.UpdateOSSInfo(info)
 	if err != nil {
 		return e.NewWithStack(e.DBError, err)
+	}
+	return nil
+}
+
+func (f *Conf) Verify() error {
+	_, err := f.store.Conf.QueryOSSInfo()
+	if err != nil {
+		return e.NewWithStack(e.DBError, err)
+	}
+	err = ali.Verify()
+	if err != nil {
+		return e.NewWithStack(e.ErrOSSVerify, err)
 	}
 	return nil
 }
